--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.2
   firebase_core: ^1.5.0
+  firebase_database: ^9.1.3
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
