--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2  
   youtube_player_flutter: ^8.0.0 # play youtube videos
   speech_recognition: ^0.3.0+1 
-  flutter_tts: ^0.7.0  
+  # flutter_tts: ^0.7.0  
   
 
 dev_dependencies:
